--- a/app.json
+++ b/app.json
@@ -1,6 +1,3 @@
 {
-  "description": "Example of a Node.js Socket.io app using heroku-buildpack-mozjpeg-encoder",
-  "env": {
-    "BUILDPACK_URL": "https://github.com/ddollar/heroku-buildpack-multi"
-  }
+  "description": "Example of a Node.js Socket.io app using heroku-buildpack-mozjpeg-encoder"
 }
