--- a/app.json
+++ b/app.json
@@ -1,3 +1,9 @@
 {
-  "description": "Example of a Node.js Socket.io app using heroku-buildpack-mozjpeg-encoder"
+  "description": "Example of a Node.js Socket.io app using heroku-buildpack-mozjpeg-encoder",
+  "env":{
+    
+    "BUILDPACK_URL":"https://github.com/heroku/heroku-buildpack-nodejs"
+
+    
+  }
 }
